--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ div.rcolumn {
    <img class="myface" src="Photo2.jpeg" alt="Chiara Belletti">
   </div>
   <div class="rcolumn">
-   <p> I am PhD student at <a href="https://crest.science/" target="_blank" rel="noopener noreferrer">CREST/Ecole polytechnique</a> (<a href="https://www.ip-paris.fr/" target="_blank" rel="noopener noreferrer">IP Paris</a>), supervised by <a href="https://crest.science/user/gregory-corcos/" target="_blank" rel="noopener noreferrer">Gregory Corcos</a>. </p>
-   <p> Research Interests: International Trade, Environmental economics:</p>
-   <p> Email: <a href="mailto:riccardo.norbiato@ensae.fr">riccardo.norbiato@ensae.fr</a>
-   <p> Social: <a href="https://twitter.com/RiccardoNorb" target="_blank" rel="noopener noreferrer">[Twitter]</a> <span>&#183;</span></p>
- 
+   <p> I am a post-doctoral scholar at the <a href="https://www.parisschoolofeconomics.eu/en/" target="_blank" rel="noopener noreferrer">Paris School of Economics</a> and <a href="https://www.taxobservatory.eu/" target="_blank" rel="noopener noreferrer">EU Tax Observatory</a>. I hold a PhD at <a href="https://crest.science/" target="_blank" rel="noopener noreferrer">CREST/Ecole polytechnique</a> (<a href="https://www.ip-paris.fr/" target="_blank" rel="noopener noreferrer">IP Paris</a>), supervised by <a href="https://crest.science/user/gregory-corcos/" target="_blank" rel="noopener noreferrer">Gregory Corcos</a>. </p>
+   <p> Research Interests: International Trade, Environmental and Agricultural economics:</p>
+   <p> Email: <a href="mailto:riccardo.norbiato@ensae.fr">riccardo.norbiato@psemail.eu</a>
+   <p> Social: <a href="https://twitter.com/RiccardoNorb" target="_blank" rel="noopener noreferrer">[twitter]</a> <span>&#183;</span></p>
+   <p> Institutional: <a href="https://www.parisschoolofeconomics.eu/equipes/riccardo-norbiato/" target="_blank" rel="noopener noreferrer">[website]</a> <span>&#183;</span></p>
 </div>
 </div>                        
 </div>
